force-app/main/default/objects/NS_Scripts__c/NS_Scripts__c.object-meta.xml
<CustomObject>
    <label>NS Scripts</label>
    <nameField>
        <displayFormat>NS Script - {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NS Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>