force-app/main/default/objects/NS_Scripts__c/fields/NS_Sandboxes__c.field-meta.xml
<CustomField>
    <fullName>NS_Sandboxes__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>NS Sandboxes</label>
    <referenceTo>NS_Sandboxes__c</referenceTo>
    <relationshipName>NS_Sync_Scripts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>