force-app/main/default/objects/NS_Scripts__c/fields/Script_URL__c.field-meta.xml
<CustomField>
    <fullName>Script_URL__c</fullName>
    <inlineHelpText>URL Format: ?script=1234&amp;deploy=1</inlineHelpText>
    <label>Script URL</label>
    <type>Url</type>
</CustomField>